NIVision/NativeCameraServer/nivision.h

typedef enum RakeDirection_enum {
    IMAQ_LEFT_TO_RIGHT             = 0,           //The function searches from the left side of the search area to the right side of the search area.
    IMAQ_RIGHT_TO_LEFT             = 1,           //The function searches from the right side of the search area to the left side of the search area.
    IMAQ_TOP_TO_BOTTOM             = 2,           //The function searches from the top side of the search area to the bottom side of the search area.
    IMAQ_BOTTOM_TO_TOP             = 3,           //The function searches from the bottom side of the search area to the top side of the search area.
    IMAQ_RAKE_DIRECTION_SIZE_GUARD = 0xFFFFFFFF   
} RakeDirection;
typedef enum ThresholdMethod_enum {
    IMAQ_THRESH_CLUSTERING           = 0,           //The function uses a method that sorts the histogram of the image within a discrete number of classes corresponding to the number of phases perceived in an image.
    IMAQ_THRESH_ENTROPY              = 1,           //The function uses a method that is best for detecting particles that are present in minuscule proportions on the image.
    IMAQ_THRESH_METRIC               = 2,           //The function uses a method that is well-suited for images in which classes are not too disproportionate.
    IMAQ_THRESH_MOMENTS              = 3,           //The function uses a method that is suited for images that have poor contrast.
    IMAQ_THRESH_INTERCLASS           = 4,           //The function uses a method that is well-suited for images in which classes have well separated pixel value distributions.
    IMAQ_THRESHOLD_METHOD_SIZE_GUARD = 0xFFFFFFFF   
} ThresholdMethod;
typedef enum ColorMode_enum {
    IMAQ_RGB                   = 0,           //The function operates in the RGB (Red, Blue, Green) color space.
    IMAQ_HSL                   = 1,           //The function operates in the HSL (Hue, Saturation, Luminance) color space.
    IMAQ_HSV                   = 2,           //The function operates in the HSV (Hue, Saturation, Value) color space.
    IMAQ_HSI                   = 3,           //The function operates in the HSI (Hue, Saturation, Intensity) color space.
    IMAQ_CIE                   = 4,           //The function operates in the CIE L*a*b* color space.
    IMAQ_CIEXYZ                = 5,           //The function operates in the CIE XYZ color space.
    IMAQ_COLOR_MODE_SIZE_GUARD = 0xFFFFFFFF   
} ColorMode;
typedef enum InterpolationMethod_enum {
    IMAQ_ZERO_ORDER                      = 0,           //The function uses an interpolation method that interpolates new pixel values using the nearest valid neighboring pixel.
    IMAQ_BILINEAR                        = 1,           //The function uses an interpolation method that interpolates new pixel values using a bidirectional average of the neighboring pixels.
    IMAQ_QUADRATIC                       = 2,           //The function uses an interpolation method that interpolates new pixel values using a quadratic approximating polynomial.
    IMAQ_CUBIC_SPLINE                    = 3,           //The function uses an interpolation method that interpolates new pixel values by fitting them to a cubic spline curve, where the curve is based on known pixel values from the image.
    IMAQ_BILINEAR_FIXED                  = 4,           //The function uses an interpolation method that interpolates new pixel values using a bidirectional average of the neighboring pixels.
    IMAQ_INTERPOLATION_METHOD_SIZE_GUARD = 0xFFFFFFFF   
} InterpolationMethod;
typedef enum EdgeProcess_enum {
    IMAQ_FIRST                   = 0,           //The function looks for the first edge.
    IMAQ_FIRST_AND_LAST          = 1,           //The function looks for the first and last edge.
    IMAQ_ALL                     = 2,           //The function looks for all edges.
    IMAQ_BEST                    = 3,           //The function looks for the best edge.
    IMAQ_EDGE_PROCESS_SIZE_GUARD = 0xFFFFFFFF   
} EdgeProcess;
//============================================================================
//  Forward Declare Data Structures
//============================================================================
typedef struct Image_struct Image;
typedef struct ROI_struct ROI;
typedef struct ColorHistogramReport_struct ColorHistogramReport;
typedef struct RakeOptions_struct RakeOptions;
typedef struct RakeReport_struct RakeReport;
typedef struct ThresholdData_struct ThresholdData;
typedef struct ColorHistogramReport_struct {
    HistogramReport plane1; //The histogram report of the first color plane.
    HistogramReport plane2; //The histogram report of the second plane.
    HistogramReport plane3; //The histogram report of the third plane.
} ColorHistogramReport;
typedef struct RakeOptions_struct {
    int                 threshold;         //Specifies the threshold value for the contrast of the edge.
    int                 width;             //The number of pixels that the function averages to find the contrast at either side of the edge.
    int                 steepness;         //The span, in pixels, of the slope of the edge projected along the path specified by the input points.
    int                 subsamplingRatio;  //Specifies the number of pixels that separate two consecutive search lines.
    InterpolationMethod subpixelType;      //The method for interpolating.
    int                 subpixelDivisions; //The number of samples the function obtains from a pixel.
} RakeOptions;
typedef struct RakeReport_struct {
    LineFloat*          rakeLines;         //The coordinate location of each of the rake lines used by the function.
    int                 numRakeLines;      //The number of lines in the rakeLines array.
    PointFloat*         firstEdges;        //The coordinate location of all edges detected as first edges.
    unsigned int        numFirstEdges;     //The number of points in the firstEdges array.
    PointFloat*         lastEdges;         //The coordinate location of all edges detected as last edges.
    unsigned int        numLastEdges;      //The number of points in the lastEdges array.
    EdgeLocationReport* allEdges;          //An array of reports describing the location of the edges located by each rake line.
    int*                linesWithEdges;    //An array of indices into the rakeLines array indicating the rake lines on which the function detected at least one edge.
    int                 numLinesWithEdges; //The number of rake lines along which the function detected edges.
} RakeReport;
typedef struct ThresholdData_struct {
    float rangeMin;    //The lower boundary of the range to keep.
    float rangeMax;    //The upper boundary of the range to keep.
    float newValue;    //If useNewValue is TRUE, newValue is the replacement value for pixels within the range.
    int   useNewValue; //If TRUE, the function sets pixel values within [rangeMin, rangeMax] to the value specified in newValue.
} ThresholdData;
IMAQ_FUNC ThresholdData*         IMAQ_STDCALL imaqAutoThreshold(Image* dest, Image* source, int numClasses, ThresholdMethod method);
IMAQ_FUNC ColorHistogramReport*  IMAQ_STDCALL imaqColorHistogram(Image* image, int numClasses, ColorMode mode, const Image* mask);
IMAQ_FUNC RakeReport*            IMAQ_STDCALL imaqRake(const Image* image, const ROI* roi, RakeDirection direction, EdgeProcess process, const RakeOptions* options);