NIVision/Interop.cs


        [DllImport(libraryPath, EntryPoint = "imaqAutoThreshold", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr imaqAutoThreshold(IntPtr dest, IntPtr source, int numClasses, ThresholdMethod method);

        [DllImport(libraryPath, EntryPoint = "imaqColorHistogram", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr imaqColorHistogram(IntPtr image, int numClasses, ColorMode mode, IntPtr mask);

        [DllImport(libraryPath, EntryPoint = "imaqRake", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr imaqRake(IntPtr image, ref ROI roi, RakeDirection direction, EdgeProcess process, ref RakeOptions options);

        [DllImport(libraryPath, EntryPoint = "Priv_ReadJPEGString_C", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Priv_ReadJPEGString_C(IntPtr image, ref IntPtr jpegString, uint stringLength);
    }
}
